--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
+    "moment": "^2.30.1",
+    "papaparse": "^5.4.1",
     "react": "18.3.1",
     "react-native": "0.76.0"
   },
